--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,22 @@ services:
 language: cpp
 
 env:
-- P=linux_x86_64 A=cp34m
-- P=linux_x86_64 A=cp35m
-- P=linux_x86_64 A=cp36m
-- P=linux_x86_64 A=cp37m
-- P=linux_x86_64 A=cp38
-- P=linux_i686 A=cp34m
-- P=linux_i686 A=cp35m
-- P=linux_i686 A=cp36m
-- P=linux_i686 A=cp37m
-- P=linux_i686 A=cp38
-- P=linux_armv7l A=cp34m
-- P=linux_armv7l A=cp35m
-- P=linux_armv7l A=cp36m
-- P=linux_armv7l A=cp37m
-- P=linux_armv7l A=cp38
-- P=linux_aarch64 A=cp34m
-- P=linux_aarch64 A=cp35m
-- P=linux_aarch64 A=cp36m
-- P=linux_aarch64 A=cp37m
-- P=linux_aarch64 A=cp38
+- P=manylinux2014_x86_64 A=cp35m
+- P=manylinux2014_x86_64 A=cp36m
+- P=manylinux2014_x86_64 A=cp37m
+- P=manylinux2014_x86_64 A=cp38
+- P=manylinux2014_i686 A=cp35m
+- P=manylinux2014_i686 A=cp36m
+- P=manylinux2014_i686 A=cp37m
+- P=manylinux2014_i686 A=cp38
+- P=manylinux2014_armv7l A=cp35m
+- P=manylinux2014_armv7l A=cp36m
+- P=manylinux2014_armv7l A=cp37m
+- P=manylinux2014_armv7l A=cp38
+- P=manylinux2014_aarch64 A=cp35m
+- P=manylinux2014_aarch64 A=cp36m
+- P=manylinux2014_aarch64 A=cp37m
+- P=manylinux2014_aarch64 A=cp38
 
 install:
 - cd $TRAVIS_BUILD_DIR
