--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,6 +28,9 @@ environment:
     - PYTHON: "C:\\Python37-x64"
 
 install:
+  # Install an outdated version of pygments because it is the last one with python 3.4 support (https://github.com/pypa/readme_renderer/releases/tag/25.0)
+  - "%PYTHON%\\python.exe -m pip install 'pygments==24.0'"
+
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install wheel twine"
   # install swig and put it on the path. Retry because of network issues with sourceforge
