--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,8 +30,8 @@ environment:
     - PYTHON: "C:\\Python38-x64"
 
 install:
-  # Install an outdated version of pygments because it is the last one with python 3.4 support (https://github.com/pypa/readme_renderer/releases/tag/25.0)
-  - "%PYTHON%\\python.exe -m pip install 'pygments==24.0'"
+  # Install an outdated version of readme_renderer because it is the last one with python 3.4 support (https://github.com/pypa/readme_renderer/releases/tag/25.0)
+  - "%PYTHON%\\python.exe -m pip install readme_renderer==24.0"
 
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install wheel twine"
